--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -177,7 +177,7 @@ a.crew-name,
 }
 
 .media-fact-value {
-  @apply flex-1 text-sm font-normal text-right text-gray-400;
+  @apply flex-1 ml-2 text-sm font-normal text-right text-gray-400;
 }
 
 .media-ratings {
