--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -180,7 +180,7 @@ a.crew-name,
 }
 
 .media-ratings {
-  @apply flex items-center justify-center px-4 py-2 border-b border-gray-700 last:border-b-0;
+  @apply flex items-center justify-center px-4 py-2 font-medium border-b border-gray-700 last:border-b-0;
 }
 
 .media-rating {
@@ -209,6 +209,10 @@ img.avatar-sm {
 
 .card-field-name {
   @apply mr-2 font-bold;
+}
+
+.card-field a {
+  @apply transition duration-300 hover:text-white hover:underline;
 }
 
 .section {
